--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -27,7 +27,7 @@ import performance from '../images/terrain-blog/performance.jpg'
       src={screenshot}
       alt='screenshot'
       widths={[1024, 768, 400]}
-      sizes='(max-width: 1200px) 100vw, 1024'
+      sizes='(max-width: 1200px) 100vw, 1024px'
       aspectRatio='1297:885'
       class='mb-8 drop-shadow-custom'
     />
