--- a/src/pages/meal-app.astro
+++ b/src/pages/meal-app.astro
@@ -209,7 +209,7 @@ import datalist from '../images/meal-app/datalist.png'
             src={ingredientOptions}
             alt='ingredient options'
             widths={[558, 400]}
-            sizes='(max-width: 1024px) 100vw, 512'
+            sizes='(max-width: 1024px) 100vw, 512px'
             aspectRatio='559:135'
             class='drop-shadow-custom'
           />
@@ -268,7 +268,7 @@ import datalist from '../images/meal-app/datalist.png'
             src={filterAndSearch}
             alt='filter and search'
             widths={[500, 400]}
-            sizes='(max-width: 768px) 100vw, (max-width: 1024px) 60vw, 400'
+            sizes='(max-width: 768px) 100vw, (max-width: 1024px) 60vw, 400px'
             aspectRatio='300:549'
             class='drop-shadow-custom'
           />
@@ -333,7 +333,7 @@ import datalist from '../images/meal-app/datalist.png'
             src={datalist}
             alt='datalist element'
             widths={[512, 400]}
-            sizes='(max-width: 768px) 100vw, (max-width: 1200px) 40vw, 512'
+            sizes='(max-width: 768px) 100vw, (max-width: 1200px) 40vw, 512px'
             aspectRatio='380:254'
             class='drop-shadow-custom'
           />
