--- a/src/pages/vr-tactics.astro
+++ b/src/pages/vr-tactics.astro
@@ -213,7 +213,7 @@ import FeatureText from '../components/features/FeatureText.astro'
             src={unitychan}
             alt='unity-chan'
             widths={[600, 400]}
-            sizes='(max-width: 1024px) 100vw, (max-width: 1200px) 30vw, 400'
+            sizes='(max-width: 1024px) 100vw, (max-width: 1200px) 30vw, 400px'
             aspectRatio='603:266'
           />
         </div>
@@ -242,7 +242,7 @@ import FeatureText from '../components/features/FeatureText.astro'
             src={textures}
             alt='unity-chan textures'
             widths={[880, 600, 400]}
-            sizes='(max-width: 1024px) 100vw, (max-width: 1200px) 30vw, 400'
+            sizes='(max-width: 1024px) 100vw, (max-width: 1200px) 30vw, 400px'
             aspectRatio='956:687'
             class='drop-shadow-custom'
           />
