--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -49,14 +49,14 @@ const { title } = Astro.props
           rel='noopener noreferrer'
           class='mr-4'
         >
-          <TwitterIcon color='#ff9a92' width='24' height='24' />
+          <TwitterIcon color='#ffad8f' width='24' height='24' />
         </a>
         <a
           href='https://www.linkedin.com/in/laura-cleveland-4495844a/'
           target='_blank'
           rel='noopener noreferrer'
         >
-          <LinkedInIcon color='#ff92a2' width='24' height='24' />
+          <LinkedInIcon color='#ffad8f' width='24' height='24' />
         </a>
       </div>
       <slot />
