--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -153,8 +153,23 @@ import thumbnail from '../images/terrain-blog/main.png'
   </Section>
 
   <div class='col-span-full flex justify-end mt-12 mb-8 pr-10'>
-    <a href='#' class='ml-6'>github</a>
-    <a href='#' class='ml-6'>twitter</a>
-    <a href='#' class='ml-6'>linkedin</a>
+    <a
+      href='https://github.com/laurakcleve'
+      target='_blank'
+      rel='noopener noreferrer'
+      class='ml-6'>github</a
+    >
+    <a
+      href='https://twitter.com/laurak_cleve'
+      target='_blank'
+      rel='noopener noreferrer'
+      class='ml-6'>twitter</a
+    >
+    <a
+      href='https://www.linkedin.com/in/laura-cleveland-4495844a/'
+      target='_blank'
+      rel='noopener noreferrer'
+      class='ml-6'>linkedin</a
+    >
   </div>
 </Layout>
