--- a/src/pages/meal-app.astro
+++ b/src/pages/meal-app.astro
@@ -69,8 +69,8 @@ import datalist from '../images/meal-app/datalist.png'
       <div
         class='shrink-0 flex justify-center xs:flex-col xs:justify-normal gap-4 xs:gap-8 xs:items-end'
       >
-        <SiteLink url='#' />
-        <GithubLink url='#' />
+        <SiteLink url='https://phenomenal-blini-ec9f50.netlify.app/' />
+        <GithubLink url='https://github.com/laurakcleve/meal-app' />
       </div>
     </div>
 
@@ -351,8 +351,8 @@ import datalist from '../images/meal-app/datalist.png'
 
   <Section>
     <div class='flex justify-center gap-4'>
-      <SiteLink url='#' />
-      <GithubLink url='#' />
+      <SiteLink url='https://phenomenal-blini-ec9f50.netlify.app/' />
+      <GithubLink url='https://github.com/laurakcleve/meal-app' />
     </div>
   </Section>
 </ProjectLayout>
