--- a/src/pages/nemesis-ai.astro
+++ b/src/pages/nemesis-ai.astro
@@ -24,7 +24,7 @@ import canvas3 from '../images/nemesis-ai/canvas-3.png'
       Nemesis AI is a bot that I built to answer questions about the rules of
       the board game
       <a
-        href='https://awakenrealms.com/games/nemesis/'
+        href='https://awakenrealms.com/games/awaken-realms/nemesis'
         target='_blank'
         rel='noopener noreferrer'
         class='text-[#89d1ed] border-b-2 border-[#77cbec]'
@@ -70,8 +70,12 @@ import canvas3 from '../images/nemesis-ai/canvas-3.png'
       <div
         class='shrink-0 flex justify-center xs:flex-col xs:justify-normal gap-4 xs:gap-8 xs:items-end'
       >
-        <SiteLink url='#' />
-        <GithubLink url='#' />
+        <SiteLink
+          url='https://board-game-chatbot-next-7snwbzrxw-laurakcleve.vercel.app/'
+        />
+        <GithubLink
+          url='https://github.com/laurakcleve/board-game-chatbot-next'
+        />
       </div>
     </div>
   </Section>
@@ -182,7 +186,7 @@ import canvas3 from '../images/nemesis-ai/canvas-3.png'
   </Section>
 
   <Section>
-    <div class='flex flex-wrap lg:flex-nowrap'>
+    <div class='flex flex-wrap lg:flex-nowrap lg:mb-16'>
       <div class='lg:basis-2/5'>
         <div
           class='mb-10 bg-gradient-to-tr from-[#2c5666] to-[#4e557a] rounded-xl'
@@ -254,8 +258,12 @@ import canvas3 from '../images/nemesis-ai/canvas-3.png'
 
   <Section>
     <div class='flex justify-center gap-4'>
-      <SiteLink url='#' />
-      <GithubLink url='#' />
+      <SiteLink
+        url='https://board-game-chatbot-next-7snwbzrxw-laurakcleve.vercel.app/'
+      />
+      <GithubLink
+        url='https://github.com/laurakcleve/board-game-chatbot-next'
+      />
     </div>
   </Section>
 </ProjectLayout>
