--- a/src/pages/vr-tactics.astro
+++ b/src/pages/vr-tactics.astro
@@ -58,7 +58,9 @@ import FeatureText from '../components/features/FeatureText.astro'
         class='shrink-0 flex justify-center xs:flex-col xs:justify-normal gap-4 xs:gap-8 xs:items-end'
       >
         <div>
-          <GithubLink url='#' />
+          <GithubLink
+            url='https://github.com/laurakcleve/unity-vr-tactics-game'
+          />
         </div>
       </div>
     </div>
@@ -287,7 +289,7 @@ import FeatureText from '../components/features/FeatureText.astro'
 
   <Section>
     <div class='flex justify-center gap-4'>
-      <GithubLink url='#' />
+      <GithubLink url='https://github.com/laurakcleve/unity-vr-tactics-game' />
     </div>
   </Section>
 </ProjectLayout>
