--- a/src/components/project-links/ProjectLink.astro
+++ b/src/components/project-links/ProjectLink.astro
@@ -4,6 +4,8 @@ const { url, text } = Astro.props
 
 <a
   href={url}
+  target='_blank'
+  rel='noopener noreferrer'
   class='px-4 py-2 flex gap-2 items-center bg-gradient-to-tr from-[#cc8861] to-[#b05372] rounded-full shadow-xl'
 >
   <slot />
