--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -53,8 +53,8 @@ import performance from '../images/terrain-blog/performance.jpg'
       <div
         class='shrink-0 flex justify-center xs:flex-col xs:justify-normal gap-4 xs:gap-8 xs:items-end'
       >
-        <SiteLink url='#' />
-        <GithubLink url='#' />
+        <SiteLink url='https://1d3trees.com/' />
+        <GithubLink url='https://github.com/laurakcleve/terrain-blog-mdx' />
       </div>
     </div>
   </Section>
@@ -132,8 +132,8 @@ import performance from '../images/terrain-blog/performance.jpg'
 
   <Section>
     <div class='flex justify-center gap-4'>
-      <SiteLink url='#' />
-      <GithubLink url='#' />
+      <SiteLink url='https://1d3trees.com/' />
+      <GithubLink url='https://github.com/laurakcleve/terrain-blog-mdx' />
     </div>
   </Section>
 </ProjectLayout>
