Add headings and text highlights to features

--- a/src/pages/meal-app.astro
+++ b/src/pages/meal-app.astro
@@ -100,12 +100,20 @@ import datalist from '../images/meal-app/datalist.png'
         </a>
       </FeatureImage>
       <FeatureText>
-        You can add your recipes and their ingredients to a list of meals, and
-        sort them by the date you last used them, which is helpful in keeping a
-        rotation. To that end, you can tag dishes that you want to be active in
-        your rotation, so if you have meals that you don’t want as often, you
-        can filter them out. All dishes can be filtered by categories/tags that
-        are created by you.
+        <h3 class='mb-8 text-xl font-bold'>A list of your own recipes</h3>
+        All your meals and their ingredients live in a library of dishes. You can
+        <span
+          class='font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#ffd787] to-[#ffb871]'
+        >
+          sort by the last used date</span
+        >, which is helpful in keeping a rotation. To that end, you can tag
+        dishes that you want to be active in your rotation, so if you have meals
+        that you don’t want as often, you can filter them out. All dishes can be
+        <span
+          class='font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#ffd787] to-[#ffb871]'
+        >
+          filtered by your own categories or tags
+        </span>.
       </FeatureText>
     </Feature>
 
@@ -120,8 +128,18 @@ import datalist from '../images/meal-app/datalist.png'
         </a>
       </FeatureImage>
       <FeatureText>
-        The categories can be filtered by matching any of the selected
-        categories, or all of them (i.e. an OR filter or an AND filter).
+        <h3 class='mb-8 text-xl font-bold'>Advanced filtering</h3>
+        The categories can be
+        <span
+          class='font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#ffd787] to-[#ffb871]'
+        >
+          filtered by matching any</span
+        > of the selected categories,
+        <span
+          class='font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#ffd787] to-[#ffb871]'
+        >
+          or all</span
+        > of them (i.e. an OR filter or an AND filter).
       </FeatureText>
     </Feature>
 
@@ -139,8 +157,13 @@ import datalist from '../images/meal-app/datalist.png'
         </a>
       </FeatureImage>
       <FeatureText>
-        For each dish, you can see which of the ingredients you have and don’t
-        have.
+        <h3 class='mb-8 text-xl font-bold'>In sync with your inventory</h3>
+        For each dish, you can see
+        <span
+          class='font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#ffd787] to-[#ffb871]'
+        >
+          which ingredients you have</span
+        > and don’t have.
       </FeatureText>
     </Feature>
 
@@ -155,8 +178,18 @@ import datalist from '../images/meal-app/datalist.png'
         </a>
       </FeatureImage>
       <FeatureText>
-        When entering in purchase items, the form remembers details about the
-        current item that you’ve previously entered and autofills them for you.
+        <h3 class='mb-8 text-xl font-bold'>Add purchased items</h3>
+        When entering in purchase items, the form
+        <span
+          class='font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#ffd787] to-[#ffb871]'
+        >
+          remembers details</span
+        > about the current item that you’ve previously entered and
+        <span
+          class='font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#ffd787] to-[#ffb871]'
+        >
+          autofills</span
+        > them for you.
       </FeatureText>
     </Feature>
 
@@ -174,10 +207,14 @@ import datalist from '../images/meal-app/datalist.png'
         </a>
       </FeatureImage>
       <FeatureText>
-        An item’s details page shows you its average price based on your
-        purchase history, as well as the average price for each location you
-        purchased it at. This helps you stay informed about your cost
-        efficiency.
+        <h3 class='mb-8 text-xl font-bold'>Price averages</h3>
+        An item’s details page shows you its average price based on your purchase
+        history, as well as the
+        <span
+          class='font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#ffd787] to-[#ffb871]'
+        >
+          average price for each location</span
+        > you purchased it at. This helps you stay informed about your cost efficiency.
       </FeatureText>
     </Feature>
 
@@ -195,9 +232,19 @@ import datalist from '../images/meal-app/datalist.png'
         </a>
       </FeatureImage>
       <FeatureText>
-        The inventory helps you reduce your food waste and use your items
-        efficiently by sorting by expiration dates and listing dishes that each
-        item can be used in.
+        <h3 class='mb-8 text-xl font-bold'>Use items efficiently</h3>
+        The inventory helps you reduce your food waste by
+        <span
+          class='font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#ffd787] to-[#ffb871]'
+        >
+          sorting by expiration dates</span
+        >
+        and listing
+        <span
+          class='font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#ffd787] to-[#ffb871]'
+        >
+          dishes they can be used in</span
+        >.
       </FeatureText>
     </Feature>
   </Section>
