--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -1,6 +1,5 @@
 ---
-import { Image } from '@astrojs/image/components'
-
+import '@fontsource/dm-sans/800.css'
 import '@fontsource/dm-sans/600.css'
 import '@fontsource/dm-sans/400.css'
 
