Add text highlights to vr page

--- a/src/pages/vr-tactics.astro
+++ b/src/pages/vr-tactics.astro
@@ -97,7 +97,11 @@ import FeatureText from '../components/features/FeatureText.astro'
       <FeatureText>
         The controls are anchored to one hand and you point and click with the
         other, so you can walk around the stage wherever you want and the
-        controls move with you.
+        <span
+          class='font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#ffd787] to-[#ffb871]'
+        >
+          controls move with you</span
+        >.
       </FeatureText>
     </Feature>
 
@@ -113,8 +117,12 @@ import FeatureText from '../components/features/FeatureText.astro'
         />
       </FeatureImage>
       <FeatureText>
-        The movement uses A* pathfinding to find the shortest path to the
-        destination.
+        The movement uses
+        <span
+          class='font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#ffd787] to-[#ffb871]'
+        >
+          A* pathfinding</span
+        > to find the shortest path to the destination.
       </FeatureText>
     </Feature>
 
@@ -130,9 +138,10 @@ import FeatureText from '../components/features/FeatureText.astro'
         />
       </FeatureImage>
       <FeatureText>
-        The game alternates between player-controlled units and AI-controlled
-        units, and the AI units move to the nearest enemy and, if in range,
-        attack.
+        The game alternates between player-controlled units and <span
+          class='font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#ffd787] to-[#ffb871]'
+          >AI-controlled units</span
+        >, and the AI units move to the nearest enemy and, if in range, attack.
       </FeatureText>
     </Feature>
 
@@ -148,8 +157,10 @@ import FeatureText from '../components/features/FeatureText.astro'
         />
       </FeatureImage>
       <FeatureText>
-        Movements and attacks can be confirmed or cancelled. I added a state
-        machine to more easily handle this functionality.
+        Movements and attacks can be <span
+          class='font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#ffd787] to-[#ffb871]'
+          >confirmed or cancelled</span
+        >. I added a state machine to more easily handle this functionality.
       </FeatureText>
     </Feature>
   </Section>
